# PiElectricsEagles-dev

./: .gitignore  Cargo.toml  LICENSE  README.md  algorithm.dia  algorithm.dia.autosave  ci_cd_test.sh  index.html  release.md  vs-code.7z
.github/workflows/: rust.yml
ClientForRequestPidSetting/: Cargo.toml
ClientForRequestPidSetting/src/: client_setting_pid.rs
ServerForSettingPidViaRemote/: Cargo.toml  README
ServerForSettingPidViaRemote/src/: main.rs
SettingPIDRemoteControl/ClientPart/: client_setting_pid.rs  minimal.rs
additional/: ci_cd_build.sh
additional/config/: header.html  method.html
additional/config_setup/: Cargo.toml  config.ini
additional/esc_calibration/: build.sh  controller.rs
additional/filter_test/: 00_make_data.sh  plotter.py
additional/gyro_getter/: build.gradle  gyro.config
additional/log_analyser/: Makefile  deps.txt  gui.ui  main.py
additional/overlays/: README.md
additional/parse_log_tool/: setup.py
additional/tools/esc_calibration/: Cargo.toml
additional/wikis/: become_developer.md  build_script.md
betaflight/: README.MD  reversed.c
demo/: Cargo.toml  lib.rs
demo/src/: .lib.rs.swp  driver.rs  main.rs  tmp9i4_za  tmpa922qi  tmpmnloic  tmpwxoris
dev/: 00_build_script.sh  Cargo.toml  build.py  build.sh
dev-docs/: README.md
dev/debian/: install.sh  postinst  preinst  service
dev/src/: callibrate_esc.rs  clk_driver.rs  config_parse.rs  controller.rs  filter.rs  ibus.rs  imu.rs  l3dgh20.rs  lis3dh_driver.rs  logger.rs  loggics.rs  main.rs  mpu6050.rs  simple_logger.rs
dev/src/config/: config.ini  core.ini  logger.config
dev/src/tools/: wifi_config.sh
dev/src/tools/run_tool/: main.py  run.json
dev/src/tools/wifi_tool/pielectricseagleswifitool/DEBIAN/: control
docs/: crates.js  index.html  release.json  source-files.js
docs/code-docs/: search-index.js  settings.html
docs/helpful/: connect_uart.md  power_run.md
docs/pielectricseagles/: fn.main.html
drone_code/: 00_build_script.sh  Cargo.toml
drone_code/src/: config_parse.rs  controller.rs  filter.rs  ibus.rs  imu.rs  logger.rs  loggics.rs  utils.rs
dshot_trial/: dshot.c
gyro_getter/: build.gradle  main.py  settings.gradle
gyro_getter/build_script/: build.gradle
helpful_pdf/: Setting-up-a-Raspberry-Pi-as-a-r.docx
overlays/: README.md
pcb_backup/3d/: PCB_2021-01-26_15-46-11_2021-01-26.pcbdoc
pcb_backup/easyeda/: PCB_2021-01-26_15-46-11_2021-01-26.dxf  PCB_2021-01-26_15-46-11_2021-01-26.json
pid_remote/: README
research/: Discovering_PID_controller_behavihous_with_diffrence_real_time_OS.docx  convert_freq_to_graph.go  realtime.md
src/: batterycontroller.rs  clk_driver.rs  config_parse.rs  controller.rs  filter.rs  ibus.rs  imu.rs  l3dgh20.rs  lis3dh_driver.rs  logger.rs  loggics.rs  main.rs  mpu6050.rs  perpare_esc.rs  reciver.rs  sbus.rs  simple_logger.rs  test_imu.rs  testing_hardware.rs  utils.rs
src/coding_tools/: warring.py  warrings.py
src/config/: config.ini  core.ini
src/drivers/: config_parse.rs  controller.rs  reciver.rs
src/loggics/: filter.rs
src/logics/: filter.rs
src/tools/: dependencies.py  docs.py  main.py
stabile/: 00_build_script.sh  Cargo.toml  LICENSE  README.md  build.sh
stabile/src/: clk_driver.rs  config_parse.rs  controller.rs  filter.rs  ibus.rs  logger.rs  main.rs  (+2 more)
tools/filter_test/: Cargo.toml
tools/filter_test/src/lib/: lib.rs
vs-code/: README.md
wikis/: build_cross.md
xenomai/: Makefile  README.md  before_go_sleep_not_accurate.txt  before_go_sleep_not_accurate_non_rtos.txt  build.md  build.sh  libxenomai.c  main.c  main.c.save  pielectricseagles.h  rt_motor
(+305 files in other folders)
