[package]
name = "pi"
version = "0.1.0"
authors = ["Aleksandrs Zaslavskis <sahsariga111@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rust-ini = "0.15"
rppal = "0.11.3"
mpu6050 = "0.1.3"
pwm-pca9685 = "0.3.0"
linux-embedded-hal = "0.3.0"
i2cdev = "0.4.4"
cgmath = "0.17.0"
pid = "2.1.0"
lazy_static = "1.4.0"
mut_static = "5.0.0"
