[package]
name = "pielectricseagles"
version = "0.1.0"
authors = ["Aleksandrs Zaslavskis <sahsariga111@gmail.com> https://github.com/alex5250 ","Mihails Zaslavskis mishariga111@gmail.com https://github.com/misha-dig"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rust-ini = "0.15"
rppal = "0.11.3"
pwm-pca9685 = "0.3.0"
linux-embedded-hal = "0.3.0"
cgmath = "0.18.0"
hex = "0.4.2"
i2cdev = "0.3.1"
mpu6050 = {git="https://github.com/Electrics-Eagles/mpu6050"}
lowpass-filter = "0.2.3"

[profile.release]
opt-level = "z"  # Optimize for size.
