[package]
name = "pielectricseagles"
version = "0.1.0"
authors = ["Aleksandrs Zaslavskis <sahsariga111@gmail.com> https://github.com/alex5250 ","Mihails Zaslavskis mishariga111@gmail.com https://github.com/misha-dig"]
edition = "2018"


[dependencies]
chrono = "0.4"
rust-ini = "0.15"
rppal = "0.11.3"
pwm-pca9685 = "0.3.0"
linux-embedded-hal = "0.3.0"
cgmath = "0.18.0"
hex = "0.4.2"
i2cdev = "0.3.1"
nb = "1.0.0"
ads1x1x = "0.2.2"
embedded-hal = "0.2.6"
mpu6050 = {git="https://github.com/Electrics-Eagles/mpu6050"}


[profile.release]
opt-level = "z"  # Optimize for size.
