[package]
name = "pielectricseagles"
version = "0.1.0"
authors = ["Aleksandrs Zaslavskis <sahsariga111@gmail.com> https://github.com/alex5250 ","Mihails Zaslavskis mishariga111@gmail.com https://github.com/misha-dig"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rust-ini = "0.15"
rppal = "0.11.3"
cast = "=0.2.3"
pwm-pca9685 = "0.3.0"
linux-embedded-hal = "0.3.0"
i2cdev = "0.4.4"
cgmath = "0.17.0"
pid = "2.1.0"
lazy_static = "1.4.0"
mut_static = "5.0.0"
hex = "0.4.2"
mpu6050 = "0.1.4"
log = "0.4.14"
simplelog = "^0.7.6"

[package.metadata.deb]
maintainer = "Alex / Mike Zaslavskis"
copyright = "2021 Alex / Mike Zaslavskis"
extended-description = """\
A simple subcommand for the Cargo package manager for \
building Debian packages from Rust projects."""
depends = "$auto"
section = "core"
priority = "optional"
maintainer-scripts = "debian/"
systemd-units = { enable = true }
separate-debug-symbols = false
