[package]
name = "Test_Filter"
version = "0.1.0"
authors = ["Alex Zaslavskis <sahsariga111@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://github.com/rmcwhorter/rust-plotter
serde = "1.0.126"
serde-pickle = "0.6.2"
rand = "0.8.3"