[package]
name = "esc_calib"
version = "0.1.0"
authors = ["misha-dig <mishariga111@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rust-ini = "0.15"
rppal = "0.11.3"
pwm-pca9685 = "0.3.0"
linux-embedded-hal = "0.3.0"
i2cdev = "0.3.1"
